# Rustplorer

./: Cargo.toml  LICENSE  README.md
egui_dnd/: Cargo.toml
egui_dnd/src/: item_iterator.rs
egui_nerdfonts/: Cargo.toml
src/: app.rs  file_tree.rs  helpers.rs  main.rs  settings.rs
src/file_system/: file_tree.rs  formatting.rs  mod.rs  operations.rs
src/ui/: settings.rs  window.rs
src/utils/: drag_drop.rs  mod.rs  sorting.rs
src/views/: common.rs  grid.rs  list.rs  mod.rs
