[package]
name = "egui_dnd"
version = "0.14.0"
edition = "2021"
authors = ["Lucas Meurer"]
repository = "https://github.com/lucasmerlin/hello_egui/tree/main/crates/egui_dnd"
homepage = "https://lucasmerlin.github.io/hello_egui/"
keywords = ["egui", "drag", "drop", "ui", "gui"]
categories = ["gui"]
description = "A drag and drop library for egui"
license = "MIT"


[dependencies]
egui_animation = "0.10"
egui = "0.33"
simple-easing = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1"

[dev-dependencies]
egui_infinite_scroll = "0.9"
egui_virtual_list = "0.9"
hello_egui_utils = "0.10"
rand = "0.9"

egui_extras = "0.33"
color-hex = "0.2.0"
egui = { version = "0.33", features = ["color-hex"] }
eframe = { version = "0.33", default-features = true }
